--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Price object",
     "keywords": ["price"],
     "homepage": "http://joffreydemetz.com/git/price/",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "license": "MIT",
 
     "authors": [
@@ -22,10 +22,7 @@
 
     "autoload": {
         "psr-4": {
-            "JDZ\\Price\\": ""
-        },
-        "exclude-from-classmap": [
-            "/Tests/"
-        ]
+            "JDZ\\Price\\": "src"
+        }
     }
 }
