--- a/composer.json
+++ b/composer.json
@@ -3,22 +3,18 @@
     "type": "library",
     "description": "Price object",
     "keywords": ["price"],
-    "homepage": "http://joffreydemetz.com/git/price/",
-    "version": "1.2.0",
+    "homepage": "https://github.com/joffreydemetz/price/",
+    "version": "1.2.1",
     "license": "MIT",
 
     "authors": [
         {
             "name": "Joffrey Demetz",
             "email": "joffrey.demetz@gmail.com",
-            "homepage": "http://joffreydemetz.com",
+            "homepage": "https://joffreydemetz.com",
             "role": "Lead"
         }
     ],
-
-    "require": {
-        "php": ">=5.6"
-    },
 
     "autoload": {
         "psr-4": {
