--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Price object",
     "keywords": ["price"],
     "homepage": "https://github.com/joffreydemetz/price/",
-    "version": "1.2.1",
+    "version": "2.0.0",
     "license": "MIT",
 
     "authors": [
@@ -16,6 +16,10 @@
         }
     ],
 
+    "require": {
+        "php": "^7.1.3"
+    },
+    
     "autoload": {
         "psr-4": {
             "JDZ\\Price\\": "src"
